# UFO-Engine

./: CMakeLists.txt  README.md
documentation/: conventions.txt
res/actor_configs/: my_player_body.json
res/animations/: animation_file_example.json
res/engine/: camera_icon.aseprite  collision_body_test.json  default_level.json  default_profile.json  ufo engine logo.aseprite  ufo_engine_transparent_logo.aseprite  untitled.tmj
res/engine_config/: config.json
res/frogatto_jr/: actors.aseprite  another_example.json  ant.aseprite  ant_animation.aseprite  ant_animation_yellow.aseprite  cake.aseprite  example.json  frogatto_jr_font.aseprite  frogatto_jr_template_level.json  frogatto_jr_test_level.json  frogatto_level_1.json  frogatto_magic_meter.aseprite  frogattomisc.aseprite  frogattos_house_outside.json  froggo.aseprite  house_development.aseprite  house_inside_tileset.aseprite  template_test.tx  text_testing.aseprite  yellow_and_colour_palette.aseprite
res/save/: file_to_read_from.json  json_test_file.json  test_file.json  to_be_saved.json
res/tux_math_on_steroids/: tuxmath_moon.aseprite
res/ufo_lang_scripts/: if_statements.ufol  maths.ufol  showcase.ufol
src/actor/: actor.cpp  actor.h
src/animation/: animated_sprite_reference.cpp  animated_sprite_reference.h  animation.cpp  animation.h  animation_bundle.cpp  animation_bundle.h  animation_manager.cpp  animation_manager.h
src/any_actor/: any_actor.h
src/asset_manager/: abstract_asset_manager.cpp  abstract_asset_manager.h  asset_manager.cpp  asset_manager.h  get_rect_from_index.cpp  get_rect_from_index.h  global_asset_manager.h  index_based_asset_manager.h  level_asset_manager.cpp  level_asset_manager.h
src/axis_aligned_collision/: axis_aligned_collision_body.cpp  axis_aligned_collision_body.h  axis_aligned_collision_system.cpp  axis_aligned_collision_system.h
src/background/: background_image.cpp  background_image.h  background_system.cpp  background_system.h
src/bitmap_level/: bitmap_collision_body.cpp  bitmap_collision_body.h  bitmap_dynamic_solid.cpp  bitmap_dynamic_solid.h  ufo_global.cpp  ufo_global.h
src/camera/: camera.cpp  camera.h  transformations.cpp  transformations.h
src/collectables/: collectable_updater.h
src/collision/: collision_body.h  collision_circle.h  collision_system.cpp  collision_system.h
src/config/: config.h
src/creation_data/: creation_data.h
src/custom/: ant.cpp  ant.h  balloon.cpp  balloon.h  balloon_pop.h  box.cpp  box.h  button_actor_config.cpp  button_actor_config.h  button_sprite_reference_config.cpp  button_sprite_reference_config.h  button_view_actors.h  button_view_cameras.h  button_view_sprite_references.h  circle_vs_line_level.h  drop_down_button.h  edible.cpp  edible.h  frogatto.h  frogatto_hud.h  frogatto_level.cpp  frogatto_level.h  heart_bubble.h  moving_sprite.h  overlap_test_level.h  pill_collision_test_level.h  quad_tree_test.h  test_collision_body.h  tongue.cpp  tongue.h  water_body.h
src/default_objects/: coin.h
src/demonstration/: custom_actor.h
src/deprecated_player_body/: player_body.cpp  player_body.h  player_body_extra_attributes.h  top_down_body.cpp  top_down_body.h
src/drawing_system/: draw.cpp  draw.h  drawing_arguments.h  drawing_system.cpp  drawing_system.h
src/ecs_prototype/: ecs_prototype.h
src/editor/: editor.h
src/empty_base/: empty_base.h
src/file/: file_menu.cpp  file_menu.h
src/forward/: actor_forward.h  animation_forward.h  smart_pointer.h
src/garbage_collected/: garbage_collected.cpp  garbage_collected.h  reference_counted.h  reference_counted_actor.h
src/garbage_collection/: ownership_id_node.h
src/graphics/: graphics.cpp  graphics.h  graphics_engine.h  graphics_engine_pge.cpp  graphics_engine_pge.h
src/graphics_provider/: graphics_provider.cpp  graphics_provider.h  pixel_game_engine.cpp  pixel_game_engine.h  ufo_pge.cpp  ufo_pge.h
src/json/: json_variant.cpp  json_variant.h
src/keyboard/: single_keyboard.cpp  single_keyboard.h
src/level/: level.cpp  level.h  level_transition_effect.cpp  level_transition_effect.h  level_trigger.h  spawn_point.cpp  spawn_point.h  splash_screen.h  tcollision_body.h  tcollision_system.cpp  tcollision_system.h  trigger.h
src/mark_tree/: example_program.h  mark_sweeper.cpp  mark_sweeper.h  mt_actor.cpp  mt_actor.h
src/mouse/: mouse.cpp  mouse.h
src/physics/: collider.cpp  collider.h  gravitational_field.h  gravity_component.h
src/pingus/: level_select_menu.cpp  level_select_menu.h  main_menu.cpp  pingu.h  pingus_level.cpp  pingus_level.h  pingus_main_menu.cpp  pingus_main_menu.h
src/player_body/: player_body.cpp  player_body.h
src/profile/: profile.cpp  profile.h
src/scene/: actor_storage.h  scene.cpp  scene.h
src/scene_system/: scene_system.cpp  scene_system.h
src/shapes/: circle.cpp  circle.h  collision_circle.cpp  collision_circle.h  collision_pill.cpp  collision_pill.h  collision_rectangle.cpp  collision_rectangle.h  collision_shape.cpp  collision_shape.h  colour_shape.h  local_position.cpp  local_position.h  modifiable_shape.h  new_shape.cpp  new_shape.h  pill.cpp  pill.h  polygon.h  raw_shape_base.cpp  ray2.cpp  ray2.h  reactive_shape.h  rectangle.cpp  rectangle.h  shape.h
src/someone_elses_code/: Holder_by_dandistine.h
src/sprite_reference/: abstract_sprite_reference.cpp  abstract_sprite_reference.h  level_sprite_reference.cpp  level_sprite_reference.h  level_widget_sprite_reference.cpp  level_widget_sprite_reference.h  sprite_reference.cpp  sprite_reference.h  widget_sprite_reference.cpp  widget_sprite_reference.h
src/state_machine/: state_machine.h
src/tilemap/: tile_map.cpp  tile_map.h  tilemap.cpp  tilemap.h  tileset_data.h
src/triggers/: trigger.h  update_trigger_shapes_in_map.h
src/tux_math_on_steroids/: comet.h  comet_numerical.h  tux_math_level.h
src/tuxtale/: coin_grabber.h  spawn_tux.h  tuxtale_collision.h
src/tuxtale_/: battle_enemy.cpp  battle_enemy.h  battle_participant.h  (+39 more)
tools/: UFOProjectManager.py  UFO_variable_exporter.py  variable_exporter_example.h  variable_exporter_ideal_usecase.h  variable_exporter_test.py
(+97 files in other folders)
